<resources>
    <string name="app_name">androidschool_animation</string>
    <string name="btn_anim">Кпонка</string>
    <string name="progress_template">%d %%</string>
    <string name="drawable_animation">Drawable animation</string>
    <string name="value_animation">Value animation</string>
    <string name="object_animation">Object animation</string>
    <string name="view_animation">View animation</string>
    <string name="custom_view_animation">Custom view animation</string>
</resources>
